<resources>
    <string name="app_name">PdfApp</string>
    <string name="telegu_text">ప్రజాస్వామ్యం అనేది ఒక రాజకీయ భావన లేదా ప్రభుత్వ ఏర్పాటు విధానం. ఇందులో ప్రజలు నిర్ణయాధికారాన్ని కలిగివుంటారు.ఆంగ్లంలో  Democracy  అని అంటారు.గ్రీకు బాషా పదం డిమోక్రటియా నుండి ఉద్బవించింది. demos అనగా ప్రజలు, kratos అనగా బలం పరిపాలన అని అర్థము. ప్రజాస్వామ్యానికి, ప్రతి ఒక్కరికి ఆమోదయోగ్యమైన (నిర్దిష్టమైన) నిర్వచనం అంటూ ఏది లేదు. కాని రాజనీతి శాస్త్రం వివరణ ప్రకారం ప్రజాస్వామ్యం రెండు |</string>
    <string name="hindi_text">भारत सहित दुनिया के कई देशों में लोकतांत्रिक शासन प्रणाली लागू, इसके साथ ही भारत को विश्व के सबसे बड़े लोकतंत्र के रुप में भी जाना जाता है। हमारे देश का लोकतंत्र संप्रभु, समाजवाद, धर्मनिरपेक्षता, लोकतांत्रिक गणराज्य सहित पांच लोकतांत्रिक सिद्धांतों पर कार्य करता है। 1947 में अंग्रेजों के औपनिवेशिक शासन से स्वतंत्रता प्राप्त करने के बाद भारत को एक लोकतांत्रिक राष्ट्र घोषित किया गया था।</string>
     <string name="eng_text">We all know that health is wealth. With its intricate network of bones,    muscles, and organs, a well-functioning human body is much like an orchestrated symphony. To keep this orchestra playing well, we need physical exercise. It may take the form of sports, yoga, or even regular walking. It is well-known that people who engage in physical exercise stay happier.</string>
    <string name="bengali_text">সার্বভৌমত্ব ভারতীয় গণতন্ত্রের একটি গুরুত্বপূর্ণ বৈশিষ্ট্য। সার্বভৌমত্ব বাইরের হস্তক্ষেপ ছাড়াই নিজের উপর একটি শাসক সংস্থার পূর্ণ ক্ষমতাকে বোঝায়। তাছাড়া ভারতীয় গণতন্ত্রে জনগণ ক্ষমতা প্রয়োগ করতে পারে। সবচেয়ে উল্লেখযোগ্য, ভারতের জনগণ তাদের প্রতিনিধি নির্বাচন করে। তদুপরি, এই প্রতিনিধিরা সাধারণ মানুষের কাছে দায়বদ্ধ থাকে। ভারতের গণতন্ত্র রাজনৈতিক সমতার নীতিতে কাজ করে। অধিকন্তু, এর অর্থ মূলত আইনের সামনে সকল নাগরিক সমান। সবচেয়ে লক্ষণীয়, ধর্ম |</string>
    <string name="punjabi_text">ਪ੍ਰਭੂਸੱਤਾ ਭਾਰਤੀ ਲੋਕਤੰਤਰ ਦੀ ਇੱਕ ਅਹਿਮ ਵਿਸ਼ੇਸ਼ਤਾ ਹੈ। ਪ੍ਰਭੂਸੱਤਾ ਬਾਹਰੀ ਦਖਲਅੰਦਾਜ਼ੀ ਤੋਂ ਬਿਨਾਂ ਆਪਣੇ ਆਪ ਉੱਤੇ ਇੱਕ ਗਵਰਨਿੰਗ ਬਾਡੀ ਦੀ ਪੂਰੀ ਸ਼ਕਤੀ ਨੂੰ ਦਰਸਾਉਂਦੀ ਹੈ। ਇਸ ਤੋਂ ਇਲਾਵਾ, ਲੋਕ ਭਾਰਤੀ ਲੋਕਤੰਤਰ ਵਿੱਚ ਸ਼ਕਤੀ ਦੀ ਵਰਤੋਂ ਕਰ ਸਕਦੇ ਹਨ। ਸਭ ਤੋਂ ਧਿਆਨ ਦੇਣ ਯੋਗ ਗੱਲ ਇਹ ਹੈ ਕਿ ਭਾਰਤ ਦੇ ਲੋਕ ਆਪਣੇ ਨੁਮਾਇੰਦੇ ਚੁਣਦੇ ਹਨ। ਇਸ ਤੋਂ ਇਲਾਵਾ, ਇਹ ਨੁਮਾਇੰਦੇ ਆਮ ਲੋਕਾਂ ਲਈ ਜ਼ਿੰਮੇਵਾਰ ਰਹਿੰਦੇ ਹਨ। ਭਾਰਤ ਵਿਚ ਲੋਕਤੰਤਰ ਰਾਜਨੀਤਿਕ ਸਮਾਨਤਾ ਦੇ ਸਿਧਾਂਤ \'ਤੇ ਕੰਮ ਕਰਦਾ ਹੈ। ਇਸ ਤੋਂ ਇਲਾਵਾ, ਇਸਦਾ ਜ਼ਰੂਰੀ ਅਰਥ ਹੈ ਕਿ ਸਾਰੇ ਨਾਗਰਿਕ ਕਾਨੂੰਨ।</string>

</resources>