<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:background="#2196F3"

        android:text="Create PDF" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="#4CAF50"
        android:text="view PDF"

        android:visibility="gone" />

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="#424040"
        android:padding="10dp"


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/eng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="English"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/eng_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/eng_text" />

        <TextView
            android:id="@+id/hindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="हिन्दी"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hindi_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/hindi_text" />

        <TextView
            android:id="@+id/telegu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="తెలుగు (Telegu)"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/telegu_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/telegu_text" />

        <TextView
            android:id="@+id/bengali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="বাংলা (Bengali)"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bengali_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/bengali_text" />

        <TextView
            android:id="@+id/punjabi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="ਪੰਜਾਬੀ (Punjabi)"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/punjabi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/punjabi_text" />

    </LinearLayout>

</LinearLayout>